# esp32-scream-receiver

./: .gitignore  .gitmodules  README.md  fuck  fuck2  git_diff  idf.bat  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.esp32_spdif  sdkconfig.esp32s3  sdkconfig.esp32s3_spdif  sdkconfig.esp32s3_usb  sdkconfig.old  tatus
.github/workflows/: build.yml
flashing_site/: esp32-metadata.json  esp32s3-metadata.json  index.html  proxy.php
main/: CMakeLists.txt  Kconfig.projbuild  audio.c  audio.h  bq25895_integration.c  bq25895_integration.h  buffer.c  buffer.h  config.h  config_manager.c  config_manager.h  global.h  html_content.h  idf_component.yml  mdns_service.c  mdns_service.h  network.c  network.h  ntp_client.cpp  ntp_client.h  scream_sender.c  scream_sender.h  secrets.example.h  spdif.c  spdif.h  usb_audio_player_main.c  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
main/bq25895/: bq25895.c  bq25895.h  bq25895_web.c  bq25895_web.h
main/test/: audio.c  audio.h  config.h  main.c  network.c  network.h  secret_credentials.h  test.tar  test.tar.b64
main/web/: index.html  script.js  styles.css
